mobile media query added

--- a/chara10.html
+++ b/chara10.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Tsumugi Shirogane </h1>
-      <p> Tsumugi Shirogane (白銀 つむぎ) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Cosplayer (超高校級の「コスプレイヤー」 lit. Super High School Level Cosplayer).</p>
+      <p class="para"> Tsumugi Shirogane (白銀 つむぎ) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Cosplayer (超高校級の「コスプレイヤー」 lit. Super High School Level Cosplayer).</p>
       <img src="Tsumugi_Shirogane_Illustration.png" alt="tsumugi" class="photo">
     </div>
   </body>
