--- a/chara12.html
+++ b/chara12.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Kaito Momota </h1>
-      <p> Kaito Momota (百田 解斗) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Astronaut (超高校級の「宇宙飛行士」 lit. Super High School Level Astronaut)..</p>
+      <p class="para"> Kaito Momota (百田 解斗) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Astronaut (超高校級の「宇宙飛行士」 lit. Super High School Level Astronaut)..</p>
       <img src="Kaito_Momota_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
