--- a/chara13.html
+++ b/chara13.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
-      <h1> Korekiyo Shinguji </h1>
+      <h1 class="para"> Korekiyo Shinguji </h1>
       <p> Korekiyo Shinguji (真宮寺 是清), also known as Kiyo, is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Anthropologist (超高校級の「民俗学者」 lit. Super High School Level Anthropologist).</p>
       <img src="Korekiyo_Shinguji_Illustration.png" alt="kaede" class="photo">
     </div>
