--- a/chara2.html
+++ b/chara2.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Shuichi Saihara </h1>
-      <p>Shuichi Saihara (最原 終一) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Detective (超高校級の「探偵」 lit. Super High School Level Detective).</p>
+      <p class="para">Shuichi Saihara (最原 終一) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Detective (超高校級の「探偵」 lit. Super High School Level Detective).</p>
       <img src="Shuichi_Saihara_Illustration.png" alt="shuichi" class="photo">
     </div>
   </body>
