--- a/chara5.html
+++ b/chara5.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Ryoma Hoshi </h1>
-      <p> Ryoma Hoshi (星 竜馬) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Tennis Pro (超高校級の「テニス選手」 lit. Super High School Level Tennis Player).</p>
+      <p class="para"> Ryoma Hoshi (星 竜馬) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Tennis Pro (超高校級の「テニス選手」 lit. Super High School Level Tennis Player).</p>
       <img src="Ryoma_Hoshi_Illustration.png" alt="ryoma" class="photo">
     </div>
   </body>
