--- a/chara6.html
+++ b/chara6.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> K1-B0 </h1>
-      <p> K1-B0 (キーボ), also known as Keebo and Ki-Bo, is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Robot (超高校級の「ロボット」 lit. Super High School Level Robot).</p>
+      <p class="para"> K1-B0 (キーボ), also known as Keebo and Ki-Bo, is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Robot (超高校級の「ロボット」 lit. Super High School Level Robot).</p>
       <img src="K1-B0_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
