--- a/chara7.html
+++ b/chara7.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Kirumi Tojo </h1>
-      <p> Kirumi Tojo (東条 斬美) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Maid (超高校級の「メイド」 lit. Super High School Level Maid).</p>
+      <p class="para"> Kirumi Tojo (東条 斬美) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Maid (超高校級の「メイド」 lit. Super High School Level Maid).</p>
       <img src="Kirumi_Tojo_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
