--- a/chara8.html
+++ b/chara8.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Himiko Yumeno </h1>
-      <p> Himiko Yumeno (夢野 秘密子) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Magician (超高校級の「マジシャン」 lit. Super High School Level Magician); however she claims her "true", unofficial title is the Ultimate Mage (超高校級の「魔法使い」 lit. Super High School Level Mage).</p>
+      <p class="para"> Himiko Yumeno (夢野 秘密子) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Magician (超高校級の「マジシャン」 lit. Super High School Level Magician); however she claims her "true", unofficial title is the Ultimate Mage (超高校級の「魔法使い」 lit. Super High School Level Mage).</p>
       <img src="Himiko_Yumeno_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
