--- a/chara9.html
+++ b/chara9.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Angie Yonaga </h1>
-      <p> Angie Yonaga (夜長 アンジー) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Artist (超高校級の「美術部」 lit. Super High School Level Art Club Member).</p>
+      <p class="para"> Angie Yonaga (夜長 アンジー) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Artist (超高校級の「美術部」 lit. Super High School Level Art Club Member).</p>
       <img src="Angie_Yonaga_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
