--- a/index.html
+++ b/index.html
@@ -26,68 +26,35 @@
     </div>
     <h1> What's Danganronpa v3? </h1>
     <div class="content">
-      <div>
+      <div class="para">
       <p>Danganronpa V3: Killing Harmony, known in Japan as New Dangan Ronpa V3: Everyone's New Semester of Killing (ニューダンガンロンパV3 みんなのコロシアイ新学期) is a Japanese visual novel game developed by Spike Chunsoft. It is the third main title in the Danganronpa series. It was released in Japan on January 12th, 2017 for PlayStation 4 and PlayStation Vita. It was launched on PlayStation 4, PlayStation Vita, and Steam for PC in North America on September 26th, 2017, and in Europe on September 29th, 2017.
 
       A promotional demo called Danganronpa V3: Killing Harmony (Demo Version) was released in Japan on December 20th, 2016[18]. The Demo was later released in North America, Europe, and Australia on August 25th, 2017[3].</p>
     </div>
-    <div>
+    <div class="para">
       <p>Official Synopsis: "Welcome to a new world of Danganronpa, and prepare yourself for the biggest, most exhilarating episode yet. Set in a "psycho-cool" environment, a new cast of 16 characters find themselves kidnapped and imprisoned in a school. Inside, some will kill, some will die, and some will be punished. Reimagine what you thought high-stakes, fast-paced investigation was as you investigate twisted murder cases and condemn your new friends to death. Forget what you thought you knew about Danganronpa and join a completely new cast of Ultimates for a brand-new beginning. In a world where everyone is trying to survive, nobody’s motivations are quite what they seem. Use your skills to solve each new murder or meet a gruesome end. The world is shaped by our perception of it. Fast-paced trial scenes will require lies, quick wits, and logic to guide your classmates to the right conclusions." </p>
     </div>
     </div>
 
     <!-- character images with link to personal site -->
-  <div class="portrainContainer">
     <a name="chara"> <h1> Characters </h1> </a>
-      <a href="chara3.html">
-        <img class="portrait" src="rantaroPortrait.jpg" alt="header" onmouseover="this.src='rantaroPortraitInverse.jpg';" onmouseout="this.src='rantaroPortrait.jpg';";>
-      </a>
-      <a href="chara1.html">
-        <img class="portrait" src="kaedePortrait.jpg" alt="header" onmouseover="this.src='kaedePortraitInverse.jpg';" onmouseout="this.src='kaedePortrait.jpg';";/>
-      </a>
-      <a href="chara5.html">
-        <img class="portrait" src="ryomaPortrait.jpg" alt="header" onmouseover="this.src='ryomaPortraitInverse.jpg';" onmouseout="this.src='ryomaPortrait.jpg';";>
-      </a>
-      <a href="chara7.html">
-        <img class="portrait" src="kirumiPortrait.jpg" alt="header"
-        onmouseover="this.src='kirumiPortraitInverse.jpg';" onmouseout="this.src='kirumiPortrait.jpg';";>
-      </a>
-      <a href="chara9.html">
-        <img class="portrait" src="angiePortrait.jpg" alt="header" onmouseover="this.src='angiePortraitInverse.jpg';" onmouseout="this.src='angiePortrait.jpg';";>
-      </a>
-      <a href="chara11.html">
-        <img class="portrait" src="tenkoPortrait.jpg" alt="header" onmouseover="this.src='tenkoPortraitInverse.jpg';" onmouseout="this.src='tenkoPortrait.jpg';";>
-      </a>
-      <a href="chara13.html">
-        <img class="portrait" src="korekiyoPortrait.jpg" alt="header" onmouseover="this.src='korekiyoPortraitInverse.jpg';" onmouseout="this.src='korekiyoPortrait.jpg';";>
-      </a>
-      <a href="chara15.html">
-        <img class="portrait" src="miuPortrait.jpg" alt="header" onmouseover="this.src='miuPortraitInverse.jpg';" onmouseout="this.src='miuPortrait.jpg';";>
-      </a>
-      <a href="chara16.html">
-        <img class="portrait" src="gontaPortrait.jpg" alt="header" onmouseover="this.src='gontaPortraitInverse.jpg';" onmouseout="this.src='gontaPortrait.jpg';";>
-      </a>
-      <a href="chara14.html">
-        <img class="portrait" src="kokichiPortrait.jpg" alt="header" onmouseover="this.src='kokichiPortraitInverse.jpg';" onmouseout="this.src='kokichiPortrait.jpg';";>
-      </a>
-      <a href="chara12.html">
-        <img class="portrait" src="kaitoPortrait.jpg" alt="header" onmouseover="this.src='kaitoPortraitInverse.jpg';" onmouseout="this.src='kaitoPortrait.jpg';";>
-      </a>
-      <a href="chara10.html">
-        <img class="portrait" src="tsumugiPortrait.png" alt="header" onmouseover="this.src='tsumugiPortraitInverse.png';" onmouseout="this.src='tsumugiPortrait.png';";>
-      </a>
-      <a href="chara8.html">
-        <img class="portrait" src="himikoPortrait.png" alt="header" onmouseover="this.src='himikoPortraitInverse.png';" onmouseout="this.src='himikoPortrait.png';";>
-      </a>
-      <a href="chara6.html">
-        <img class="portrait" src="k1boPortrait.png" alt="header" onmouseover="this.src='k1boPortraitInverse.png';" onmouseout="this.src='k1boPortrait.png';";>
-      </a>
-      <a href="chara4.html">
-        <img class="portrait" src="makiPortrait.png" alt="header" onmouseover="this.src='makiPortraitInverse.png';" onmouseout="this.src='makiPortrait.png';";>
-      </a>
-      <a href="chara2.html">
-        <img class="portrait" src="shuichiPortrait.png" alt="header" onmouseover="this.src='shuichiPortraitInverse.png';" onmouseout="this.src='shuichiPortrait.png';";>
-      </a>
+    <div class="portaitContainer">
+      <a href="chara3.html" ><img class="portrait" src="rantaroPortrait.jpg"  alt="header" onmouseover="this.src='rantaroPortraitInverse.jpg';"  onmouseout="this.src='rantaroPortrait.jpg';"  /></a>
+      <a href="chara1.html" ><img class="portrait" src="kaedePortrait.jpg"    alt="header" onmouseover="this.src='kaedePortraitInverse.jpg';"    onmouseout="this.src='kaedePortrait.jpg';"    /></a>
+      <a href="chara5.html" ><img class="portrait" src="ryomaPortrait.jpg"    alt="header" onmouseover="this.src='ryomaPortraitInverse.jpg';"    onmouseout="this.src='ryomaPortrait.jpg';"    /></a>
+      <a href="chara7.html" ><img class="portrait" src="kirumiPortrait.jpg"   alt="header" onmouseover="this.src='kirumiPortraitInverse.jpg';"   onmouseout="this.src='kirumiPortrait.jpg';"   /></a>
+      <a href="chara9.html" ><img class="portrait" src="angiePortrait.jpg"    alt="header" onmouseover="this.src='angiePortraitInverse.jpg';"    onmouseout="this.src='angiePortrait.jpg';"    /></a>
+      <a href="chara11.html"><img class="portrait" src="tenkoPortrait.jpg"    alt="header" onmouseover="this.src='tenkoPortraitInverse.jpg';"    onmouseout="this.src='tenkoPortrait.jpg';"    /></a>
+      <a href="chara13.html"><img class="portrait" src="korekiyoPortrait.jpg" alt="header" onmouseover="this.src='korekiyoPortraitInverse.jpg';" onmouseout="this.src='korekiyoPortrait.jpg';" /></a>
+      <a href="chara15.html"><img class="portrait" src="miuPortrait.jpg"      alt="header" onmouseover="this.src='miuPortraitInverse.jpg';"      onmouseout="this.src='miuPortrait.jpg';"      /></a>
+      <a href="chara16.html"><img class="portrait" src="gontaPortrait.jpg"    alt="header" onmouseover="this.src='gontaPortraitInverse.jpg';"    onmouseout="this.src='gontaPortrait.jpg';"    /></a>
+      <a href="chara14.html"><img class="portrait" src="kokichiPortrait.jpg"  alt="header" onmouseover="this.src='kokichiPortraitInverse.jpg';"  onmouseout="this.src='kokichiPortrait.jpg';"  /></a>
+      <a href="chara12.html"><img class="portrait" src="kaitoPortrait.jpg"    alt="header" onmouseover="this.src='kaitoPortraitInverse.jpg';"    onmouseout="this.src='kaitoPortrait.jpg';"    /></a>
+      <a href="chara10.html"><img class="portrait" src="tsumugiPortrait.png"  alt="header" onmouseover="this.src='tsumugiPortraitInverse.png';"  onmouseout="this.src='tsumugiPortrait.png';"  /></a>
+      <a href="chara8.html" ><img class="portrait" src="himikoPortrait.png"   alt="header" onmouseover="this.src='himikoPortraitInverse.png';"   onmouseout="this.src='himikoPortrait.png';"   /></a>
+      <a href="chara6.html" ><img class="portrait" src="k1boPortrait.png"     alt="header" onmouseover="this.src='k1boPortraitInverse.png';"     onmouseout="this.src='k1boPortrait.png';"     /></a>
+      <a href="chara4.html" ><img class="portrait" src="makiPortrait.png"     alt="header" onmouseover="this.src='makiPortraitInverse.png';"     onmouseout="this.src='makiPortrait.png';"     /></a>
+      <a href="chara2.html" ><img class="portrait" src="shuichiPortrait.png"  alt="header" onmouseover="this.src='shuichiPortraitInverse.png';"  onmouseout="this.src='shuichiPortrait.png';"  /></a>
     </div>
     <script>
     // When the user clicks on div, open the popup
