--- a/chara1.html
+++ b/chara1.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Kaede Akamatsu </h1>
-      <p> Kaede Akamatsu (赤松 楓) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Pianist (超高校級の「ピアニスト」 lit. Super High School Level Pianist).</p>
+      <p class="para"> Kaede Akamatsu (赤松 楓) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Pianist (超高校級の「ピアニスト」 lit. Super High School Level Pianist).</p>
       <img src="Kaede_Akamatsu_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
