--- a/chara11.html
+++ b/chara11.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Tenko Chabashira </h1>
-      <p> Tenko Chabashira (茶柱 転子) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Aikido Master (超高校級の「合気道家」 lit. Super High School Level Aikido Master).</p>
+      <p class="para"> Tenko Chabashira (茶柱 転子) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Aikido Master (超高校級の「合気道家」 lit. Super High School Level Aikido Master).</p>
       <img src="Tenko_Chabashira_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
