--- a/chara14.html
+++ b/chara14.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Kokichi Oma </h1>
-      <p> Kokichi Oma (王馬 小吉) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Supreme Leader (超高校級の「総統」 lit. Super High School Level Supreme Leader).</p>
+      <p class="para"> Kokichi Oma (王馬 小吉) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Supreme Leader (超高校級の「総統」 lit. Super High School Level Supreme Leader).</p>
       <img src="Kokichi_Ouma_Illustration.png" alt="kokichi" class="photo">
     </div>
   </body>
