--- a/chara15.html
+++ b/chara15.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Miu Iruma </h1>
-      <p> Miu Iruma (入間 美兎) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Inventor (超高校級の「発明家」 lit. Super High School Level Inventor).</p>
+      <p class="para"> Miu Iruma (入間 美兎) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Inventor (超高校級の「発明家」 lit. Super High School Level Inventor).</p>
       <img src="Miu_Iruma_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
