--- a/chara16.html
+++ b/chara16.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Gonta Gokuhara </h1>
-      <p> Gonta Gokuhara (獄原 ゴン太) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Entomologist (超高校級の「昆虫博士」 lit. Super High School Level Entomologist).</p>
+      <p class="para"> Gonta Gokuhara (獄原 ゴン太) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. His title is the Ultimate Entomologist (超高校級の「昆虫博士」 lit. Super High School Level Entomologist).</p>
       <img src="Gonta_Gokuhara_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
