--- a/chara3.html
+++ b/chara3.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Rantaro Amami </h1>
-      <p>Rantaro Amami (天海 蘭太郎) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. He doesn't remember his talent at the beginning of the Killing Game, so his title is the Ultimate ??? (超高校級の「???」 lit. Super High School Level ???).</p>
+      <p class="para">Rantaro Amami (天海 蘭太郎) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. He doesn't remember his talent at the beginning of the Killing Game, so his title is the Ultimate ??? (超高校級の「???」 lit. Super High School Level ???).</p>
       <img src="Rantaro_Amami_Illustration.png" alt="kaede" class="photo">
     </div>
   </body>
