--- a/chara4.html
+++ b/chara4.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.html" class="col1">Home</a>
     </nav>
 
     <div class="content">
       <h1> Maki Harukawa </h1>
-      <p> Maki Harukawa (春川 魔姫) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Child Caregiver (超高校級の「保育士」 lit. Super High School Level Nursery School Teacher).</p>
+      <p class="para"> Maki Harukawa (春川 魔姫) is a student in the Ultimate Academy for Gifted Juveniles and a participant of the Killing School Semester featured in Danganronpa V3: Killing Harmony. Her title is the Ultimate Child Caregiver (超高校級の「保育士」 lit. Super High School Level Nursery School Teacher).</p>
       <img src="Maki_Harukawa_Illustration.png" alt="maki" class="photo">
     </div>
   </body>
